# anp_open_sdk/anp_users/user_28cddee0fade0258/openapi_did%3Awba%3Alocalhost%253A9527%3Awba%3Auser%3A28cddee0fade0258.yaml
@@ -98,10 +98,28 @@ paths:
             application/json:
               schema:
                 type: object
-  /wba/user/{resp_did}/agent.yaml:
+  /wba/user/{resp_did}/{yaml_file_name}.yaml:
     get:
       summary: Get agent OpenAPI YAML
-      operationId: get__wba_user_resp_did_agent.yaml
+      operationId: get__wba_user_resp_did_yaml_file_name.yaml
+      parameters:
+      - name: req_did
+        in: query
+        required: false
+        schema:
+          type: string
+        default: demo_caller
+      responses:
+        '200':
+          description: 成功响应
+          content:
+            application/json:
+              schema:
+                type: object
+  /wba/user/{resp_did}/{jsonrpc_file_name}.json:
+    get:
+      summary: Get agent OpenAPI YAML
+      operationId: get__wba_user_resp_did_jsonrpc_file_name.json
       parameters:
       - name: req_did
         in: query
